--- a/FKitShop/package.json
+++ b/FKitShop/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.7.7",
     "bootstrap": "^4.6.0",
     "boxicons": "^2.1.4",
