--- a/FKitShop/package.json
+++ b/FKitShop/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
     "bootstrap": "^4.6.0",
     "boxicons": "^2.1.4",
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1"
