--- a/FKitShop/package.json
+++ b/FKitShop/package.json
@@ -18,7 +18,8 @@
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite-plugin-pwa": "^0.20.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
