--- a/FKitShop/package.json
+++ b/FKitShop/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.6.0",
     "boxicons": "^2.1.4",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
