--- a/FKitShop/package.json
+++ b/FKitShop/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "antd": "^5.21.1",
     "axios": "^1.7.7",
     "bootstrap": "^4.6.0",
     "boxicons": "^2.1.4",
@@ -19,6 +21,9 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "redux": "^5.0.1",
     "vite-plugin-pwa": "^0.20.5"
   },
   "devDependencies": {
