--- a/FKitShop/package.json
+++ b/FKitShop/package.json
@@ -25,9 +25,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
-    "vite-plugin-pwa": "^0.20.5"
-    "react-modal": "^3.16.1",
-    "react-router-dom": "^6.26.2"
+    "vite-plugin-pwa": "^0.20.5",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
