--- a/FKitShop/package.json
+++ b/FKitShop/package.json
@@ -18,15 +18,16 @@
     "bootstrap": "^4.6.0",
     "boxicons": "^2.1.4",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
-    "vite-plugin-pwa": "^0.20.5",
-    "react-modal": "^3.16.1"
+    "vite-plugin-pwa": "^0.20.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
