--- a/FKitShop/package.json
+++ b/FKitShop/package.json
@@ -22,11 +22,11 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
-    "vite-plugin-pwa": "^0.20.5",
-    "react-modal": "^3.16.1"
+    "vite-plugin-pwa": "^0.20.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
