--- a/FKitShop/package.json
+++ b/FKitShop/package.json
@@ -9,26 +9,6 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@popperjs/core": "^2.11.8",
-    "@react-oauth/google": "^0.12.1",
-    "@reduxjs/toolkit": "^2.2.7",
-    "antd": "^5.21.1",
-    "axios": "^1.7.7",
-    "bootstrap": "^4.6.0",
-    "boxicons": "^2.1.4",
-    "clsx": "^2.1.1",
-    "cors": "^2.8.5",
-    "jwt-decode": "^4.0.0",
-    "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1",
-    "react-modal": "^3.16.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2",
-    "redux": "^5.0.1",
-    "vite-plugin-pwa": "^0.20.5"
-  },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
@@ -40,7 +20,29 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "jwt-decode": "^4.0.0",
     "sass": "^1.45.0",
     "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "antd": "^5.21.1",
+    "axios": "^1.7.7",
+    "bootstrap": "^4.6.0",
+    "boxicons": "^2.1.4",
+    "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "js-cookie": "^3.0.5",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
+    "react-dom": "^18.3.1",
+    "react-jwt": "^1.2.2",
+    "react-modal": "^3.16.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "redux": "^5.0.1",
+    "vite-plugin-pwa": "^0.20.5"
   }
 }
