--- a/FKitShop/package.json
+++ b/FKitShop/package.json
@@ -26,6 +26,7 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@popperjs/core": "^2.11.8",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
@@ -35,6 +36,7 @@
     "boxicons": "^2.1.4",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
