--- a/FKitShop/package.json
+++ b/FKitShop/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "antd": "^5.21.3",
     "axios": "^1.7.7",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
@@ -26,11 +27,11 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@popperjs/core": "^2.11.8",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
-    "antd": "^5.21.1",
     "axios": "^1.7.7",
     "bootstrap": "^4.6.0",
     "boxicons": "^2.1.4",
@@ -41,6 +42,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-jwt": "^1.2.2",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
