--- a/FKitShop/package.json
+++ b/FKitShop/package.json
@@ -2,7 +2,7 @@
   "name": "fkitshop",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@codeceptjs/configure": "^1.0.1",
     "@eslint/js": "^9.9.0",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.3",
@@ -17,12 +18,14 @@
     "@vitejs/plugin-react": "^4.3.1",
     "antd": "^5.21.3",
     "axios": "^1.7.7",
+    "codeceptjs": "^3.6.7",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "jwt-decode": "^4.0.0",
+    "playwright": "^1.48.0",
     "sass": "^1.45.0",
     "vite": "^5.4.1"
   },
@@ -38,6 +41,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "faker": "^6.6.6",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
