--- a/FKitShop/package.json
+++ b/FKitShop/package.json
@@ -27,17 +27,28 @@
     "jwt-decode": "^4.0.0",
     "playwright": "^1.48.0",
     "sass": "^1.45.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.9"
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@ckeditor/ckeditor5-build-classic": "^43.2.0",
+    "@ckeditor/ckeditor5-code-block": "^43.2.0",
+    "@ckeditor/ckeditor5-core": "^43.2.0",
+    "@ckeditor/ckeditor5-editor-classic": "^43.2.0",
+    "@ckeditor/ckeditor5-html-support": "^43.2.0",
+    "@ckeditor/ckeditor5-image": "^43.2.0",
+    "@ckeditor/ckeditor5-react": "^9.3.1",
+    "@ckeditor/ckeditor5-ui": "^43.2.0",
+    "@ckeditor/ckeditor5-upload": "^43.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@popperjs/core": "^2.11.8",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
-    "axios": "^1.7.7",
     "bootstrap": "^4.6.0",
     "boxicons": "^2.1.4",
+    "ckeditor5": "^43.2.0",
+    "ckeditor5-custom-project": "file:ckeditor5",
+    "ckeditor5-premium-features": "^43.2.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
