--- a/FKitShop/package.json
+++ b/FKitShop/package.json
@@ -53,6 +53,7 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "faker": "^6.6.6",
+    "html-react-parser": "^5.1.18",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
