udd chart to dashboard

--- a/FKitShop/package.json
+++ b/FKitShop/package.json
@@ -46,6 +46,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "bootstrap": "^4.6.0",
     "boxicons": "^2.1.4",
+    "chart.js": "^4.4.6",
     "ckeditor5": "^43.2.0",
     "ckeditor5-custom-project": "file:ckeditor5",
     "ckeditor5-premium-features": "^43.2.0",
@@ -57,6 +58,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-jwt": "^1.2.2",
